fixed .. resolution in fURI. if there is no parent to consume, then the resolution stops. migrated the Space Helper methods away from using Map to store itermediate results to Iterator of Tuple.Pairs. Been wanting to do that for a long time now. Have SPI support in micropython metatron. SSD1355 support in micropython metatron.